# fastfilter

./: .dockstore.yml  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: cd.yml  ci_push.yml  git_pages.yml
docker/: Dockerfile
fastfilter/: all.html  enum.Command.html  enum.Mode.html  fn.main.html  fn.prepare_input.html  fn.run_filter.html  index.html  sidebar-items.js  struct.Cli.html  struct.FilterArgs.html
fastfilter/eval/: enum.ScanTemplate.html  enum.ThresholdScan.html  enum.VarClass.html  fn.allele_class_bucket_mut.html  fn.allele_index.html  fn.allele_len_bucket_mut.html  fn.bounds01.html  fn.f1.html  (+94 more)
scripts/: eval_hprc_chr20_multisample.sh  gq_dp_vcfeval_scan.sh  parse_vcfeval_summary.py  plot_gq_dp_vcfeval.R  plot_gq_dp_vcfeval_pr.R  vcfeval_stratified_pr.py
search.index/: 0124b05344a5.js  042e936245ab.js  0485371de1c9.js  077d2915e7cf.js  092513ab498e.js  09aa20f0118d.js  0f32065ac261.js  12e7a973ba7f.js  1594ea38738b.js  1868f87982f6.js  197086b57f38.js  197fabbe999b.js  19d481e3b507.js  1fc4e7196e03.js  21ebe826b5e5.js  22ed1a9635b0.js  22fe9c7a1a65.js  266398185fb9.js  2cf80cb53327.js  31114bb629aa.js  32bc5ebda26b.js  33250738b796.js  3b07fd76cc7b.js  3d67321a7a5d.js  4228ea763fc5.js  4335812ed68e.js  43910a28f33f.js  444c59d88f7b.js  445b75bd3fdc.js  48ebfa50aa52.js  49f1f6b61baf.js  4d2ecbfb9a11.js  510f52e7731d.js  5295af52fefc.js  5cf1eef8fe15.js  5d2e8a3cd5b2.js  5f9a5339fc3e.js  649deded52d9.js  66ac2c371017.js  68a5183dd19e.js  (+14 more)
src/: eval.rs  filter.rs  main.rs  vcfeval.rs
wdl/: FastFilter.wdl
(+58 files in other folders)
