[package]
name = "fastfilter"
version = "0.1.2"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rayon = "1.10"
rust-htslib = "0.44.1"
gbdt = "0.1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
num_cpus = "1.16"
which = "6.0"
plotters = { version = "0.3", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ttf", "line_series"] }
openssl = { version = "0.10", features = ["vendored"] }
